Fixed the annoyng blue things and the annoying gap in the drop menu

--- a/css/dropMenu.css
+++ b/css/dropMenu.css
@@ -19,7 +19,7 @@
 /* Here is the distance from the image menu (70px)*/
 .Navigation ul li .extended { position: absolute; top: 70px; left: 0; width: 100px; background: url(../image/general/dropdownback.png); z-index: 1000; -moz-box-shadow: 0 0px 8px rgba(0,0,0,0.8); -webkit-box-shadow: 0 0px 8px rgba(0,0,0,0.8); box-shadow: 0 0 8px black; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; border: 1px solid white; display: none; color: white; }
 
-.Navigation ul li .extended img { display: block; margin: 5px auto 15px auto; -webkit-box-reflect:below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.8, transparent), to(rgba(255,255,255,0.5))); }
+.Navigation ul li .extended img { display: block; margin: 5px auto 15px auto;}
 
 .Navigation ul li .extended p { padding: 10px; font-size: 11px; line-height: 17px; text-shadow: 0 1px 1px black; }
 
@@ -27,7 +27,7 @@
 
 .Navigation ul li .extended span { padding-left: 10px; font-size: 11px; }
 
-.Navigation ul li .extended ul.smallNav { border-top: 1px solid rgba(141,141,141,0.50);  padding: 10px; height: 100px;  }
+.Navigation ul li .extended ul.smallNav { border-top: 1px solid rgba(141,141,141,0.50);  padding: 10px 10px 10px 3px; height: 20px;  }
 
 .Navigation ul li .extended ul.smallNav li { width: 90px; padding: 0; line-height: 22px; font-weight: bold; background: url(../image/general/linkback.png) no-repeat; background-size:contain;}
 
